# bollu.github.io

./: #README.md#  #todo.md#  -axiom-of-choice-and-zorns-lemma.html  -burnside-as-space-average-equals-time-average.html  -cokernel-is-not-sheafy.html  -connectedness-in-terms-of-continuity.html  -derivative-of-step-is-dirac-delta.html  -discrete-schilds-ladder.html  -edward-kmetts-list-of-useful-math.html  -extended-euclidian-algorithm.html  -finite-topologies-and-dfs-numbering.html  -germs-stalks-sheaves-of-differentiable-functions.html  -in-a-pid-all-prime-ideals-are-maximal-geometrically.html  -intuition-for-limits-in-category-theory.html  -katex-in-duktape.html  -kebab-case.html  -local-ring-in-terms-of-invertibility.html  -localization-introducing-epsilons.html  -nan-punning.html  -nullstellensatz-for-schemes.html  -offline-documentation.html  -osqp-convex-optimizer-in-6000-loc.html  -perspectives-on-yoneda.html  -prime-numbers-as-maximal-among-principal-ideals.html  -stars-and-bars-by-generating-functions.html  -the-ise-grand-shrine.html  -this-is-not-a-place-of-honor.html  -topological-proof-of-infinitude-of-primes.html  -using-gurobi.html  -von-neumann-foundations-of-qm.html  .README.md.~undo-tree~  .flashbake  .gdb_history  .gitignore  .gitmodules  03-16.md  03-17.md  03-21.md  03-22.md  03-24.md  (+1031 more)
.ipynb_checkpoints/: repr-theory-sn-checkpoint.ipynb
advanced-algorithms/: Makefile  README.md  harvard.tex  lec-10.tex  lec-11.tex  lec-15.tex  lec-16.tex  lec-21.tex  lec-5.tex  lec-6.tex  lec-8.tex  lec-9.tex  main.tex  review.tex
algebra/: atm.tex  main.tex
ant/: main.tex
barvinok/: slides.tex
builder/: .builder.cpp.swp  .gitignore  :  CMakeLists.txt  README.md  builder.cpp  default.nix  mono.css  utf8.c  utf8.h
builder/duktape/: README.md  duk_config.h  duk_source_meta.json  duktape.c
builder/tests/: README-stub.md  codeblock  err-quote-no-newline  hyphen-link  link  lists  lists-numbered  math  newlines  quote  xfail-lists-numbered
builder/tth_C/: .gitignore  CHANGES  INSTALL  latex2gif  license.txt  ps2gif  ps2png  tth.1  tth.c  tth_manual.html  tthsplit.c
caa/: lec-10.tex  lec-11.tex  lec-12.tex  lec-14.tex  lec-16.tex  lec-17.tex  lec-18.tex  lec-19.tex  lec-20.tex  lec-4.tex  lec-6.tex  lec-7.tex  lec-8.tex  main.tex  review.tex
category-theory/: main.tex  makefile
category-theory-in-context/: calculus-of-adjunctions.tex  main.tex  makefile
competitive-programming/: jeff-dp.tex  main.tex  makefile
complexity/: lec-10.tex  lec-11.tex  lec-12.tex  lec-4.tex  lec-5.tex  lec-6.tex  lec-7.tex  lec-8.tex  lec-9.tex  main.tex  questions.md
content/: freelancing.md  gsoc-vispy-report-6.md  gsoc-vispy-week-7.md  gsoc-vispy.md  js-cant-eta-reduce.md  me.md
css/: stylesheet.css
databases/: .gitignore  20161105.tex  main.tex
ddg-laplace-operator/: index.html
declarative/: ANIMGENERATED.js  anim.cpp  anim.hs  index.html  index.md  makefile  minanim.js  mono.css  script.js
dependent-types/: makefile
diffgeo/: Geodesics-and-Covariant-Derivative.ipynb  gauss-map-local-coord.ipynb  geodesics.ipynb  grassmanian-plucker.ipynb  hmc-gaussian.py  intrinsic-geometry.ipynb  leapfrog-planets.py  lowdim.lhs  main.tex  makefile
distributedsystems/: main.md  main.tex
docs/: 404.html  blog.html  index.html  index.xml  sitemap.xml
docs/blog/hyperfunctions/hs/: LICENSE  hyperfunctions.cabal
docs/blog/hyperfunctions/hs/examples/: Cantor.hs
docs/blog/hyperfunctions/hs/src/Control/Monad/: Hyper.hs
docs/blog/hyperfunctions/hs/src/Control/Monad/Hyper/: Rep.hs
docs/blog/machines/machines-0.6.4/: LICENSE  machines.cabal  stack.yaml
docs/blog/machines/machines-0.6.4/benchmarks/: Benchmarks.hs
docs/blog/machines/machines-0.6.4/dist-newstyle/cache/: config  elaborated-plan  improved-plan  plan.json  solver-plan  source-hashes  up-to-date
docs/blog/machines/machines-0.6.4/examples/: Examples.hs  LICENSE  machines-examples.cabal
docs/blog/machines/machines-0.6.4/src/Data/: Machine.hs
docs/blog/machines/machines-0.6.4/src/Data/Machine/: Fanout.hs  Group.hs  Is.hs  Lift.hs  Mealy.hs  MealyT.hs  Moore.hs  Pipe.hs  Plan.hs  Process.hs  Runner.hs  Source.hs  Stack.hs  Tee.hs  Type.hs  Wye.hs
dsaa/: lec-2.tex  lec-3.tex  lec-4.tex
egg-equality-saturation-slides/: .gitignore  slides.tex
flows/: ford-fulkerson-flows-in-networks-randcorp-research-studies-book.djvu  report.tex
fomenko-homotopic-topology/: main.tex
gametheory/: game.py  main.tex  quiz  report-paper-social-choice-with-non-quasi-linear-utilities.md
graphics/: README.md  lec-3.tex  midsem.md  rasterisation-2
hatcher/: README.md  main.tex
iiit-talks/: main.tex
information-security/: lec-11.tex  lec-13.tex  lec-14.tex  lec-15.tex  lec-16.tex  lec-17.tex  lec-18.tex  lec-19.tex  lec-4.tex  lec-5.tex  lec-7.tex  lec-8.tex  lec-9-review.tex  main.tex
infotheory/: main.tex
jacobian/: index.html  polyfill.min.js  sketch.js
knot-theory/: README.md
kreyszig-diffgeo/: kreyszig-diffgeo.djvu
learningtheory/: README.md  main.tex
lie-algeba/: main.tex
lifeplanning/: 2025-09.typst
logic/: main.tex
lpsolve-interior-point/: .gitignore  ANIMGENERATED.js  anim.cpp  anim.js  blogcache.txt  index.html  index.md  interior-point.js  makefile  mono.css
mathemagic/: README.md  index.html  three.html
mcmc/: hmc1d.py  hmceuler.py  importance-eg.py  makefile  references.bib  report.tex
mobius/: index.md  makefile  minanim.js
munkres/: main.tex
musicscores/: swipsey.lily
nonlineardynamics/: main.tex
notes/: README.md  makefile  politics.md  smt-modulo-oracles.ipynb
notes/strings/impl/: CMakeLists.txt  README.md  aho-corasick.cpp  burrowswheeler.cpp  duel.cpp  f.cpp  kmp.cpp  lcp.cpp  manachers.cpp  suffixtrie.cpp
optimisation/: main.tex
philosophy/: term-paper-final.bib  term-paper-final.tex  term-paper-mid.tex
philosophy-god-knowledge/: Makefile  README.md  main.tex  term-paper-final.bib  term-paper-final.tex  term-paper-mid.bib  term-paper-mid.tex
physics/: 1  :W!  README.md  lec-1.tex  lec-2.tex  lec-3.tex  lec-4.tex  lec-5.tex  main.tex
pois/: 1  Makefile  (+22 more)
(+739 files in other folders)
