name:          machines-examples
category:      Control, Enumerator
version:       0.1
license:       BSD3
cabal-version: >= 1.10
license-file:  LICENSE
author:        Josh Cough
maintainer:    Edward A. Kmett <ekmett@gmail.com>
stability:     provisional
homepage:      http://github.com/ekmett/machines/
bug-reports:   http://github.com/ekmett/machines/issues
copyright:     Copyright (C) 2014 Edward A. Kmett
synopsis:      Networked stream transducers
description:   Networked stream transducers
               .
               @machines@ examples

build-type:    Simple
tested-with:   GHC == 7.4.2
             , GHC == 7.6.3
             , GHC == 7.8.4
             , GHC == 7.10.3
             , GHC == 8.0.2
             , GHC == 8.2.2
             , GHC == 8.4.3
             , GHC == 8.6.1

source-repository head
  type: git
  location: git://github.com/ekmett/machines.git

library
  build-depends:
    base         == 4.*,
    machines     == 0.6.*,
    mtl          >= 2 && < 2.3

  exposed-modules:
    Examples

  default-language: Haskell2010
  ghc-options:      -Wall
